Single spinner alignment fix

--- a/ui/static/main.css
+++ b/ui/static/main.css
@@ -2307,7 +2307,7 @@ div.list table thead .vmname {
 }
 
 .single .state .spinner {
-    margin: 10px 55px 0 15px !important;
+    margin: 20px 55px 0 15px !important;
 }
 
 .action-indicator {
